--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color: rgba(0, 0, 0, 0.26);
+}
 .center-text {
     display: flex;
     justify-content: center;
@@ -5,15 +8,21 @@
 
 .title{
     font-size: 40px;
-   
+    text-shadow: 2px 2px 4px brown;
     display: flex;
     justify-content: center;
 }
 .week{
     width: 91%;
-    height: 446px;
+    height: 487px;
     border: 1px solid black;
     margin: 0 auto;
+    background-color: rgba(255, 255, 0, 0.521);
+    box-shadow: 0px 0px 20px slateblue;
+    overflow-y: scroll;
+}
+::-webkit-scrollbar {
+    display: none;
 }
 
 .add-task{
@@ -24,7 +33,8 @@
 }
 .true {
     color: white;
-    background-color: greenyellow !important;
+    padding: 5px;
+    background-color: #7c7c7c !important;
 }
 .main{
     display: flex;
@@ -33,11 +43,52 @@
     display: flex;
     margin: 28px;
     margin-left: 120px !important;
-    
+
 }
 .done-remove{
     display: flex;
 }
 .remove{
     margin-left: 10px;
+}
+
+.main-container a {
+    text-decoration: none;
+    color: brown;
+    border: 1px solid silver;
+    padding: 5px;
+}
+.main-container input{
+    padding: 3px;
+}
+.main-container label{
+    margin-left: 7px;
+}
+.main-container a:hover{
+    background-color: silver;
+}
+.add-task{
+    padding: 10px;
+}
+.add-task:hover{
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.267);
+    border: none;
+    padding: 11px;
+}
+.counter{
+    color: brown;
+}
+.menuBar{
+    position: absolute;
+    top: 10px;
+    left: 20px;
+}
+#nav ul li{
+    margin: 3px;
+}
+#nav ul li:hover{
+    margin: 4px;
+    color: yellow;
+    cursor: pointer;
 }
