--- a/style.css
+++ b/style.css
@@ -28,9 +28,9 @@ body{
 .add-task{
     margin-left: 46%;
 }
-.isDone{
+/* .isDone{
     background-color: aqua;
-}
+} */
 .true {
     color: white;
     padding: 5px;
@@ -57,6 +57,7 @@ body{
     color: brown;
     border: 1px solid silver;
     padding: 5px;
+    background-color: silver;
 }
 .main-container input{
     padding: 3px;
@@ -65,16 +66,22 @@ body{
     margin-left: 7px;
 }
 .main-container a:hover{
-    background-color: silver;
+    background-color: orange;
+    color: black;
+    border: 1px solid red;
+    transition: all 1s;
+    border-radius: 2px;
 }
 .add-task{
     padding: 10px;
 }
 .add-task:hover{
     cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.267);
-    border: none;
+    background-color: rgb(166, 255, 0);
+    border: 1px solid black;
     padding: 11px;
+    transition: all 2s;
+    border-radius: 5px;
 }
 .counter{
     color: brown;
@@ -91,4 +98,5 @@ body{
     margin: 4px;
     color: yellow;
     cursor: pointer;
+    transition: all 0.2s;
 }
